Activity Life cycle, 화면 회전시 activity 재생성 방지.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,12 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".ScrollActivity" />
         <activity android:name=".SecondActivity" />
-        <activity android:name=".IntentActivity"></activity>
-        <uses-permission android:name="android.permission.CALL_PHONE"/>
+        <activity android:name=".IntentActivity" />
+
+        <uses-permission android:name="android.permission.CALL_PHONE" />
+
+        <activity android:name=".exam_lifecycle.LifeCycleActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"/>
     </application>
 
 </manifest>
