--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hji.myfirstandroidapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +29,8 @@
             android:configChanges="orientation|keyboardHidden|screenSize" />
         <activity android:name=".exam_coffee.CoffeeActivity" />
         <activity android:name=".exam_ListView.ListViewActivity" />
-        <activity android:name=".exam_webview.WebViewActivity"></activity>
+        <activity android:name=".exam_webview.WebViewActivity" />
+        <activity android:name=".exam_fragment.FragmentExamActivity"></activity>
     </application>
 
 </manifest>
