Main Thread 와 작업스레드

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity android:name=".exam.exam_fragActivity" />
         <activity android:name=".exam.exam2Activity" />
         <activity android:name=".exam_viewpager.ScreenSlideActivity" />
-        <activity android:name=".exam_eventbus.EventBusActivity"></activity>
+        <activity android:name=".exam_eventbus.EventBusActivity" />
+        <activity android:name=".exam.BasketBallActivity" />
+        <activity android:name=".exam_thread.ThreadActivity"></activity>
     </application>
 
 </manifest>
