농구예제 + 액션바만 추가.
리소스 패키지에 menu폴더추가.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,12 +31,12 @@
         <activity android:name=".exam_ListView.ListViewActivity" />
         <activity android:name=".exam_webview.WebViewActivity" />
         <activity android:name=".exam_fragment.FragmentExamActivity" />
-        <activity android:name=".exam.exam_fragActivity" />
         <activity android:name=".exam.exam2Activity" />
         <activity android:name=".exam_viewpager.ScreenSlideActivity" />
         <activity android:name=".exam_eventbus.EventBusActivity" />
         <activity android:name=".exam.BasketBallActivity" />
-        <activity android:name=".exam_thread.ThreadActivity"></activity>
+        <activity android:name=".exam_thread.ThreadActivity"/>
+            <activity android:name=".exam_thread.AsyncTaskActivity" />
     </application>
 
 </manifest>
