--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,21 @@
         <activity android:name=".exam_viewpager.ScreenSlideActivity" />
         <activity android:name=".exam_eventbus.EventBusActivity" />
         <activity android:name=".exam.BasketBallActivity" />
-        <activity android:name=".exam_thread.ThreadActivity"/>
-            <activity android:name=".exam_thread.AsyncTaskActivity" />
+        <activity android:name=".exam_thread.ThreadActivity" />
+        <activity android:name=".exam_thread.AsyncTaskActivity" />
+        <activity android:name=".exam.SignUpActivity" />
+        <activity android:name=".exam.SignUp2Activity" />
+        <activity android:name=".exam_broadcast.BroadCastActivity" />
+
+        <receiver
+            android:name=".exam_broadcast.MyReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter android:priority="10000">
+                <action android:name="android.intent.action.BATTERY_LOW"/>
+            </intent-filter>
+        </receiver>
     </application>
+
 
 </manifest>
