--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,10 +46,11 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter android:priority="10000">
-                <action android:name="android.intent.action.ACTION_POWER_CONNECTED"/>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
             </intent-filter>
         </receiver>
-    </application>
 
+        <activity android:name=".exam_parsing.JsonParsingActivity"></activity>
+    </application>
 
 </manifest>
