--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.facebook.stetho:stetho:1.3.1'
 
 }
