--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -56,7 +57,7 @@
             android:label="@string/title_activity_note_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".notepad.activitys.MemoEditActivity"></activity>
-        <activity android:name=".notepad.fragments.MemoFragmentListActivity"></activity>
+        <activity android:name=".notepad.fragments.MemoListFragmentActivity"></activity>
     </application>
 
 </manifest>
