--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
 
         <activity android:name=".exam_parsing.JsonParsingActivity" />
         <activity
-            android:name=".notepad.NoteMainActivity"
+            android:name=".notepad.activitys.NoteMainActivity"
             android:label="@string/title_activity_note_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".notepad.activitys.MemoEditActivity" />
