--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".ScrollActivity" />
-        <activity android:name=".SecondActivity" />
+        <activity android:name=".load_picture.PictureActivity$SecondActivity" />
         <activity android:name=".IntentActivity" />
 
         <uses-permission android:name="android.permission.CALL_PHONE" />
