http://developer.android.com/intl/ko/guide/topics/ui/settings.html

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,7 +61,9 @@
         <activity android:name=".notepad.activitys.MemoEditActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-                <category android:name="android.intent.category.DEFAULT"/>
+
+                <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
@@ -76,7 +78,10 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".load_picture.PictureActivity"></activity>
+        <activity android:name=".load_picture.PictureActivity" />
+        <activity
+            android:name=".notepad.activitys.SettingsActivity"
+            android:label="@string/title_activity_settings"></activity>
     </application>
 
 </manifest>
