--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
             android:name=".notepad.activitys.SettingsActivity"
             android:label="@string/title_activity_settings" />
         <activity android:name=".load_picture.PictureNetworkActivity" />
+        <activity android:name=".chat.ChatActivity"></activity>
     </application>
 
 </manifest>
