--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.suwonsmartapp:async-bitmap-loader:0.3'
+    compile 'junit:junit:4.12'
+    compile 'org.robolectric:robolectric-resources:3.0'
 }
