--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     compile 'com.suwonsmartapp:async-bitmap-loader:0.3'
     compile 'junit:junit:4.12'
     compile 'org.robolectric:robolectric-resources:3.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
